k8s/batchman.yaml
kind: Pod
apiVersion: v1
metadata:
  name: batchman-app
  labels:
    app: batchman
spec:
  containers:
    - name: batchman-app
      image: fredhutch/batchman:latest
      imagePullPolicy: Always
      command: ["/start.sh"]

---

kind: Service
apiVersion: v1
metadata:
  name: batchman-service
spec:
  selector:
    app: batchman
  ports:
    - port: 8000 # Default port for image
